Fix T70385: Pose brush breaks when using pose origin offset

Reviewed By: jbakker

Maniphest Tasks: T70385

Differential Revision: https://developer.blender.org/D5945